MDEV-10341: InnoDB: Failing assertion: mutex_own(mutex) - mutex_exit_func

Fix memory barrier issues on releasing mutexes. We must have