storage/xtradb/include/os0sync.h
@@ -531,19 +531,13 @@ os_atomic_test_and_set(volatile lock_word_t* ptr)
 
 /** Do an atomic release.
 
-In theory __sync_lock_release should be used to release the lock.
-Unfortunately, it does not work properly alone. The workaround is
-that more conservative __sync_lock_test_and_set is used instead.
-
-Performance regression was observed at some conditions for Intel
-architecture. Disable release barrier on Intel architecture for now.
 @param[in,out]	ptr		Memory location to write to
 @return the previous value */
 inline
-lock_word_t
+void
 os_atomic_clear(volatile lock_word_t* ptr)
 {
-	return(__sync_lock_test_and_set(ptr, 0));
+	__sync_lock_release(ptr);
 }
 
 # elif defined(HAVE_IB_GCC_ATOMIC_TEST_AND_SET)
@@ -907,11 +901,11 @@ for synchronization */
 	} while (0);
 
 /** barrier definitions for memory ordering */
-#ifdef IB_STRONG_MEMORY_MODEL
-/* Performance regression was observed at some conditions for Intel
-architecture. Disable memory barrier for Intel architecture for now. */
+#ifdef __WIN__
+/* Windows atomic primitives imply a full memory barrier themselves. */
 # define os_rmb do { } while(0)
 # define os_wmb do { } while(0)
+# define os_mb  do { } while(0)
 # define os_isync do { } while(0)
 # define IB_MEMORY_BARRIER_STARTUP_MSG \
 	"Memory barrier is not used"
@@ -951,6 +945,8 @@ architecture. Disable memory barrier for Intel architecture for now. */
 	"_mm_lfence() and _mm_sfence() are used for memory barrier"
 
 #else
+/* Performance regression was observed at some conditions for Intel
+architecture. Disable memory barrier for Intel architecture for now. */
 # define os_rmb do { } while(0)
 # define os_wmb do { } while(0)
 # define os_mb do { } while(0)
